app/assets/stylesheets/organizations-page.scss
#organization-page {

  h3 { font-weight: bold; }

  @include make-row();

  #organization-main {
    @include make-md-column(9);

    section {
      padding: 18px 0 24px;
      background: transparent url(image-path('divider.png')) repeat-x bottom;

      h3 {
        margin: 20px 0;
      }

      > div {
        @include make-row();

        > div {
          @include make-md-column(3);
          padding-top: 18px;
          padding-bottom: 18px;

          > div:first-child {
            color: #888;
            font-size: 16px;
          }
        }
      }
    }

    #organization-about {
      > div {
        > div {
          @include make-md-column(6);
        }
      }

      #organization-address {
        @include make-md-column(12);
      }
    }

    #map-container {
      width: 100%;
      height: 480px;
      @include make-row();

      #map {
        @include make-md-column(12);
        height: 100%;

        #map-canvas {
          width: 100%;
          height: 100%;

          .leaflet-popup-content {
            p {
              margin: 0;
              line-height: 1.3;

              &.name {
                margin-bottom: 6px;
              }

              &.address {
                color: #888;
                font-size: 12px;
              }
            }
          }
        }
      }
    }

    #organization-grant-summary {
      > div {
        @include make-row();
      }

      .grant-summary {
        @include make-md-column(12);
      }

      .grant-figures {
        @include make-md-column(12);
        padding: 0;
      }
    }

    ul#organization-project-list {
      @extend .list-unstyled;

      li {
        padding: 18px 0;
        padding-right:30px;
        border-bottom: 2px solid #eee;

        &:first-child {
          padding-top: 0;
        }

        &:last-child {
          border-bottom: 0;
        }

        > div {
          @include make-row();

          > div {
            padding-top: 18px;
            padding-bottom: 18px;

            > div:first-child {
              color: #888;
              font-size: 16px;
            }
          }
        }

        .organization-project-name {
          @include make-md-column(12);
          padding-bottom: 0;

          a {
            font-size: 24px;
            font-weight: bold;
          }
        }
      }
    }

    .organization-grant-details {
      @include clearfix();

      .grant-summary {
        @include grant-summary();
      }
    }


  }

}

